add enums
