# backend/app/Enums/TransmissionType.php
@@ -1,0 +1,11 @@
+<?php
+
+namespace App\Enums;
+
+
+
+enum TransmissionType: int
+{
+    case Mechanics = 0;
+    case Automatic = 1;
+}
