# backend/app/Models/Tariff.php
@@ -19,4 +19,8 @@ class Tariff extends Model
     {
         return $this->belongsTo(City::class);
     }
+    public function cars()
+    {
+        return $this->hasMany(Car::class, 'tariff_id');
+    }
 }
